# SitePipe

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  example.html  example.md  package.yaml  sitepipe.cabal  stack.yaml
app/: Main.hs
artwork/: Makefile
docs/: tutorial.md
examples/blog/: blog.cabal  stack.yaml
examples/blog/app/: Main.hs
examples/blog/site/css/: style.css
examples/blog/site/posts/: chapter1.md
examples/blog/site/templates/: base.html  index.html  meta-data.html  post.html  rss.xml  tag.html  tags.html
examples/starter-template/: LICENSE  README.md  stack.yaml  starter-template.cabal
examples/starter-template/app/: Main.hs
examples/starter-template/site/posts/: article.md
examples/starter-template/site/templates/: index.html  post.html
src/: SitePipe.hs
src/SitePipe/: Error.hs  Files.hs  Pandoc.hs  Parse.hs  Pipes.hs  Readers.hs  Templating.hs  Types.hs  Utilities.hs
