name:                sitepipe
version:             0.1.1
synopsis:            A simple to understand static site generator
homepage:            https://github.com/ChrisPenner/sitepipe#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SitePipe
                     , SitePipe.Pipes
                     , SitePipe.Readers
                     , SitePipe.Templating
                     , SitePipe.Files
                     , SitePipe.Parse
                     , SitePipe.Types
                     , SitePipe.Utilities
  build-depends:       base >= 4.9 && < 5
                     , optparse-applicative
                     , unordered-containers
                     , directory
                     , filepath
                     , megaparsec
                     , mtl
                     , pandoc
                     , yaml
                     , mustache >= 2.2.3
                     , bytestring
                     , text
                     , parsec
                     , exceptions
                     , Glob
                     , lens-aeson
                     , lens
                     , aeson
                     , shelly
                     , MissingH
                     , containers

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/sitepipe
