name:                sitepipe
version:             0.1.1
synopsis:            A simple to understand static site generator
homepage:            https://github.com/ChrisPenner/sitepipe#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.0.2, GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     SitePipe
                     , SitePipe.Pipes
                     , SitePipe.Readers
                     , SitePipe.Templating
                     , SitePipe.Files
                     , SitePipe.Parse
                     , SitePipe.Types
                     , SitePipe.Utilities
  build-depends:       base                 >= 4.9      && < 4.11
                     , optparse-applicative >= 0.13.2
                     , unordered-containers >= 0.2.8.0  && < 0.3
                     , directory            >= 1.3.0.0  && < 1.4.0.0
                     , filepath             >= 1.4.1.1  && < 1.4.2.0
                     , megaparsec           >= 5.3.1    && < 6.3.0
                     , mtl                  >= 2.2.1    && < 2.3.0
                     , pandoc               >= 1.19.2   && < 1.19.3
                     , yaml                 >= 0.8.23.3 && < 0.8.24
                     , mustache             >= 2.2.3
                     , bytestring           >= 0.10.8.1 && < 0.10.9.0
                     , text                 >= 1.2.2.2  && < 1.2.3.0
                     , parsec               >= 3.1.11   && < 3.1.12
                     , exceptions           >= 0.8.3    && < 0.8.4
                     , Glob                 >= 0.8.0    && < 0.9.0
                     , lens-aeson           >= 1.0.2    && < 1.1.0
                     , lens                 >= 4.15.4   && < 4.16
                     , aeson                >= 1.1.2.0  && < 1.3.0.0
                     , shelly               >= 1.6.8    && < 1.6.9
                     , MissingH             >= 1.4.0.1  && < 1.4.1.0
                     , containers           >= 0.5.7.1  && < 0.5.11.0
                     , void                 >= 0.7.2    && < 0.8.0

  if impl(ghc >= 8.2)
    build-depends:     pandoc >= 1.19.2.4

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/sitepipe
