name:                sitepipe
version:             0.3.0.1
synopsis:            A simple to understand static site generator
homepage:            https://github.com/ChrisPenner/sitepipe#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.0.2, GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     SitePipe
                     , SitePipe.Pipes
                     , SitePipe.Readers
                     , SitePipe.Templating
                     , SitePipe.Files
                     , SitePipe.Parse
                     , SitePipe.Types
                     , SitePipe.Utilities
  build-depends:       base                 >= 4.9      && < 4.11
                     , optparse-applicative >= 0.13.2
                     , unordered-containers >= 0.2.8.0  && < 0.3
                     , directory            >= 1.3.0.0  && < 1.4
                     , filepath             >= 1.4.1.1  && < 1.5
                     , megaparsec           >= 5.3.1    && < 6.6
                     , mtl                  >= 2.2.1    && < 2.3
                     , pandoc               >= 1.19.2   && < 1.20
                     , yaml                 >= 0.8.23.3 && < 0.9
                     , mustache             >= 2.2.3
                     , bytestring           >= 0.10.8.1 && < 0.11
                     , text                 >= 1.2.2.2  && < 1.3
                     , parsec               >= 3.1.11   && < 3.2
                     , exceptions           >= 0.8.3    && < 0.9
                     , Glob                 >= 0.8.0    && < 0.10
                     , lens-aeson           >= 1.0.2    && < 1.1
                     , lens                 >= 4.15.4   && < 4.17
                     , aeson                >= 1.1.2.0  && < 1.3
                     , shelly               >= 1.6.8    && < 1.8
                     , MissingH             >= 1.4.0.1  && < 1.5
                     , containers           >= 0.5.7.1  && < 0.6

  if impl(ghc >= 8.2)
    build-depends:     pandoc >= 1.19.2.4

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/sitepipe
