name:                blog
version:             1.0.0
description:         A simple blog using SitePipe
homepage:            https://github.com/ChrisPenner/blog#readme
license:             BSD3
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sitepipe
                     , containers
                     , mustache
  default-language:    Haskell2010
