name:                starter-template
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            www.example.com
license:             BSD3
license-file:        LICENSE
author:              Author
maintainer:          Author Email
copyright:           2017 Author
category:            SitePipe Site
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable build-site
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      , sitepipe
                      , mustache >= 2.2.3
  default-language:    Haskell2010
